cabal-version: 3.0
name:          require-callstack-ghc98-reproducer
version:       0.1.0.0
build-type:    Simple

executable require-callstack-ghc98-reproducer
    default-language: Haskell2010
    build-depends:    base
                    , require-callstack
    hs-source-dirs:   app
    main-is:          Main.hs
